# oatmilk

./: Cargo.toml  README.md
.github/workflows/: rust.yml
images/: Makefile  phases.dot
llvmlite/: Cargo.toml  README.md
llvmlite/src/: ast.rs
llvmlite2wasm/: Cargo.toml  README.md
llvmlite2wasm/src/: errors.rs  lib.rs
llvmlite2x86/: Cargo.toml
llvmlite2x86/src/: errors.rs  lib.rs  sizeof.rs
oat-ast/: Cargo.toml
oat-ast/src/: lib.rs  macros.rs
oat-error/: Cargo.toml
oat-error/src/: lib.rs
oat-error/src/parser/: mod.rs
oat-error/src/types/: mod.rs
oat-parse/: Cargo.toml
oat-parse/src/: helper.rs  keywords.rs  lib.rs  tokens.rs
oat-parse/src/expression/: array.rs  boolean.rs  call.rs  identifier.rs  length.rs  lib.rs  mod.rs  null.rs  operator.rs  projection.rs  string.rs
oat-parse/src/lexer/: mod.rs
oat-parse/src/types/: mod.rs
oat-symbol/: Cargo.toml
oat-symbol/src/: arena.rs  lib.rs
oat-typecheck/: Cargo.toml
oat-typecheck/src/: lib.rs  locals_context.rs
oat-typecontext/: Cargo.toml
oat-typecontext/src/: lib.rs
oat2llvmlite/: Cargo.toml
oat2llvmlite/src/: compile.rs  constant_fold.rs  context.rs  lib.rs
oat2llvmlite/src/compile/: expression.rs  mod.rs  types.rs
oat2llvmlite/src/context/: mod.rs  type_context.rs
sample-files/: empty.oat  ex1.oat  fib.oat  geometry.oat  point.oat  should-fail-local-scoping.oat
src/: config.rs  frontend.rs  main.rs
test-framework/: Cargo.toml
test-framework/src/: lib.rs  main.rs
x86/: Cargo.toml
x86/src/: lib.rs
x86/src/operands/: byte_operand.rs  jump_operand.rs  mod.rs  operand.rs  to_operand.rs
x86/src/register/: mod.rs
