[package]
name = "oatmilk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "^3.0"
features = ["derive"]

[dependencies.indexmap]
version = "^1.8"

[dependencies.oat-parse]
path = "oat-parse"
version = "0.1.0"

[dependencies.llvmlite]
path = "llvmlite"
version = "0.1.0"

[dependencies.llvmlite2wasm]
path = "llvmlite2wasm"
version = "0.1.0"

[dependencies.llvmlite2x86]
path = "llvmlite2x86"
version = "0.1.0"

[dependencies.oat-symbol]
path = "oat-symbol"
version = "0.1.0"

[dependencies.oat-typecontext]
path = "oat-typecontext"
version = "0.1.0"

[dependencies.oat-error]
path = "oat-error"
version = "0.1.0"
