[package]
name = "oat2llvmlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.8.0"

[dependencies.llvmlite]
version = "0.1.0"
path = "../llvmlite"

[dependencies.oat-ast]
version = "0.1.0"
path = "../oat-ast"
